--- a/jwang/jams/test_rted.ipynb
+++ b/jwang/jams/test_rted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-20T14:50:27.821845Z",
@@ -30,9 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7.2.post260.dev0+g263bbdeb\n",
+      "2.8.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(andes.__version__)\n",
     "print(pp.__version__)"
@@ -40,18 +49,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating code for 1 models on 8 processes.\n"
+     ]
+    }
+   ],
    "source": [
-    "case_path = '/Users/jinningwang/Documents/work/andes/jwang/jams/cases/'\n",
-    "case14 = 'case14.xlsx'\n",
-    "\n",
-    "case = case_path + case14\n",
+    "case = andes.get_case('ieee14/ieee14_ac8b.xlsx')\n",
+    "case = '/Users/jinningwang/Documents/work/andes/jwang/case/ieee39_ev2.xlsx'\n",
     "ssa = andes.load(case,\n",
-    "                setup=True,\n",
-    "                no_output=True,\n",
-    "                default_config=False)"
+    "                 setup=True,\n",
+    "                 no_output=True,\n",
+    "                 default_config=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test load ``from_andes()``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2023-04-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "ssdc = dcopf(name=\"DCOPF\", OutputFlag=0)\n",
+    "ssdc.from_andes(ssa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test ``solve()``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DCOPF GB model is loaded.\n",
+      "DCOPF is solved.\n",
+      "DCOPF: total cost=58.564\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gen</th>\n",
+       "      <th>pg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PV_1</td>\n",
+       "      <td>6.164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PV_2</td>\n",
+       "      <td>1.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PV_3</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PV_4</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PV_5</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PV_6</td>\n",
+       "      <td>8.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PV_7</td>\n",
+       "      <td>7.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PV_8</td>\n",
+       "      <td>7.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PV_9</td>\n",
+       "      <td>10.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PV_10</td>\n",
+       "      <td>0.900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Slack_10</td>\n",
+       "      <td>15.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         gen      pg\n",
+       "0       PV_1   6.164\n",
+       "1       PV_2   1.500\n",
+       "2       PV_3   1.000\n",
+       "3       PV_4   1.000\n",
+       "4       PV_5   1.000\n",
+       "5       PV_6   8.000\n",
+       "6       PV_7   7.000\n",
+       "7       PV_8   7.000\n",
+       "8       PV_9  10.000\n",
+       "9      PV_10   0.900\n",
+       "10  Slack_10  15.000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssdc.solve()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test ``diagnostic``"
    ]
   },
   {
@@ -60,9 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd = dcopf(name=\"DCOPF\", OutputFlag=0)\n",
-    "ssd.from_andes(ssa)\n",
-    "ssd.solve()"
+    "ssdc.load.p0 *= 4\n",
+    "ssdc.diagnostic()"
    ]
   },
   {
@@ -71,7 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd.load"
+    "ssdr = rted(name=\"RTED\", OutputFlag=0)\n",
+    "ssdr.from_andes(ssa)"
    ]
   },
   {
@@ -80,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd.line"
+    "hasattr(ssdr.gen, 'olg')"
    ]
   },
   {
@@ -89,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd.load"
+    "ssd.gen.index = ssd.gen.idx"
    ]
   },
   {
@@ -98,8 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd.load.p0 *= 4\n",
-    "ssd.solve()"
+    "ssd"
    ]
   },
   {
@@ -108,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd.diagnostic()"
+    "ssdr.gen"
    ]
   },
   {
@@ -117,10 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd = rted(name=\"RTED\")\n",
-    "ssd.from_andes(ssa)\n",
-    "ssd.build()\n",
-    "ssd.mdl.optimize()"
+    "ssdr.solve()"
    ]
   },
   {
@@ -129,9 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = ssd.mdl.getConstrs()\n",
-    "ssd.mdl.remove(c[0])\n",
-    "ssd.mdl.update()"
+    "ssdr.load.p0 *= 4\n",
+    "ssdr.diagnostic()"
    ]
   },
   {
@@ -140,8 +313,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd.mdl.remove(ssd.llu)\n",
-    "ssd.mdl.optimize()"
+    "ssdr2 = rted2(name=\"RTED\", OutputFlag=0)\n",
+    "ssdr2.from_andes(ssa)"
    ]
   },
   {
@@ -150,195 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssd.mdl.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.rampu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.mdl.getVars()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.build()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "equal.all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.mdl.Status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.mdl.optimize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.mdl.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.mdl.remove('0_U')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "self = ssd\n",
-    "\n",
-    "mdl = self.mdl\n",
-    "\n",
-    "\n",
-    "ptotal = self.load.p0.sum()\n",
-    "\n",
-    "gendict = self.gendict\n",
-    "linedict = self.linedict\n",
-    "gen_gsfdict = self.gen_gsfdict\n",
-    "\n",
-    "GEN = gendict.keys()\n",
-    "LINE = linedict.keys()\n",
-    "\n",
-    "# --- power balance ---\n",
-    "p_sum = sum(self.pg[gen] for gen in GEN)\n",
-    "self.cpb = mdl.addConstr(p_sum == ptotal, name='PowerBalance')\n",
-    "\n",
-    "\n",
-    "lhs = {}\n",
-    "for line in LINE:\n",
-    "    lhs[line] = sum(self.pg[gen] * gen_gsfdict[gen][line] for gen in GEN)\n",
-    "\n",
-    "self.clu = mdl.addConstrs((lhs[line]+linedict[line]['sup'] <= linedict[line]['rate_a'] for line in LINE),\n",
-    "                name='LineLimU')\n",
-    "\n",
-    "# for line in LINE:\n",
-    "#     lhs1 = sum(self.pg[gen] * gen_gsfdict[gen][line] for gen in GEN)\n",
-    "#     mdl.addConstr(lhs1+linedict[line]['sup'] <= linedict[line]['rate_a'], name=f'{line}_U')\n",
-    "#     mdl.addConstr(lhs1+linedict[line]['sup'] >= -linedict[line]['rate_a'], name=f'{line}_D')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lhs = {}\n",
-    "for line in LINE:\n",
-    "    lhs[line] = sum(self.pg[gen] * gen_gsfdict[gen][line] for gen in GEN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lhs1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.mdl.Status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.gen0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdl_df['idx'].isin(idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = [2]\n",
-    "src = ['ramp_agc']\n",
-    "for col in src:\n",
-    "    ssd.gen[col][ssd.gen.idx.isin(idx)] = 9999\n",
-    "ssd.gen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.gen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = {1: 'a', 2: 'b', 3: 'c'}"
+    "ssdr2.solve()"
    ]
   },
   {
@@ -347,20 +332,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd = rted2()\n",
-    "ssd.from_andes(ssa)\n",
-    "ssd.def_type2([5], [2], [2])\n",
-    "ssd.build()\n",
-    "ssd.mdl.optimize()\n",
-    "ssd.get_res()"
-   ]
   }
  ],
  "metadata": {
