--- a/jwang/jams/test_rted.ipynb
+++ b/jwang/jams/test_rted.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.2.post260.dev0+g263bbdeb\n",
+      "1.7.2.post261.dev0+g4cc576a1\n",
       "2.8.0\n"
      ]
     }
@@ -234,9 +234,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DCOPF diagnostic process:\n",
+      "Overload by 149.47%.\n",
+      "DCOPF GB model is loaded.\n",
+      "DCOPF: total cost=93.702\n",
+      "Scale load to 40.0% CAN address it.\n",
+      "DCOPF IISConstrs: [<gurobi.Constr pb>]\n",
+      "DCOPF IISUB: [<gurobi.Var pg[PV_1]>, <gurobi.Var pg[PV_2]>, <gurobi.Var pg[PV_3]>, <gurobi.Var pg[PV_4]>, <gurobi.Var pg[PV_5]>, <gurobi.Var pg[PV_6]>, <gurobi.Var pg[PV_7]>, <gurobi.Var pg[PV_8]>, <gurobi.Var pg[PV_9]>, <gurobi.Var pg[PV_10]>, <gurobi.Var pg[Slack_10]>]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ssdc.load.p0 *= 4\n",
     "ssdc.diagnostic()"
@@ -244,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,54 +278,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "hasattr(ssdr.gen, 'olg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd.gen.index = ssd.gen.idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssdr.gen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Missing data: ['cost', 'cost.cru', 'cost.crd', 'cost.sfrur', 'sfrdr']\n",
+      "RTED GB model is loaded.\n",
+      "RTED is solved.\n",
+      "RTED: total cost=58.564\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gen</th>\n",
+       "      <th>pg</th>\n",
+       "      <th>pru</th>\n",
+       "      <th>prd</th>\n",
+       "      <th>bu</th>\n",
+       "      <th>bd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PV_1</td>\n",
+       "      <td>6.164</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PV_2</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PV_3</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PV_4</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PV_5</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PV_6</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PV_7</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PV_8</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PV_9</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PV_10</td>\n",
+       "      <td>0.900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Slack_10</td>\n",
+       "      <td>15.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         gen      pg  pru  prd   bu   bd\n",
+       "0       PV_1   6.164  0.0  0.0  0.0  0.0\n",
+       "1       PV_2   1.500  0.0  0.0  0.0  0.0\n",
+       "2       PV_3   1.000  0.0  0.0  0.0  0.0\n",
+       "3       PV_4   1.000  0.0  0.0  0.0  0.0\n",
+       "4       PV_5   1.000  0.0  0.0  0.0  0.0\n",
+       "5       PV_6   8.000  0.0  0.0  0.0  0.0\n",
+       "6       PV_7   7.000  0.0  0.0  0.0  0.0\n",
+       "7       PV_8   7.000  0.0  0.0  0.0  0.0\n",
+       "8       PV_9  10.000  0.0  0.0  0.0  0.0\n",
+       "9      PV_10   0.900  0.0  0.0  0.0  0.0\n",
+       "10  Slack_10  15.000  0.0  0.0  0.0  0.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ssdr.solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RTED diagnostic process:\n",
+      "Overload by 149.47%.\n",
+      "RTED GB model is loaded.\n",
+      "RTED: total cost=93.702\n",
+      "Scale load to 40.0% CAN address it.\n",
+      "RTED IISConstrs: [<gurobi.Constr pb>]\n",
+      "RTED IISUB: [<gurobi.Var pg[PV_1]>, <gurobi.Var pg[PV_2]>, <gurobi.Var pg[PV_3]>, <gurobi.Var pg[PV_4]>, <gurobi.Var pg[PV_5]>, <gurobi.Var pg[PV_6]>, <gurobi.Var pg[PV_7]>, <gurobi.Var pg[PV_8]>, <gurobi.Var pg[PV_9]>, <gurobi.Var pg[PV_10]>, <gurobi.Var pg[Slack_10]>]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ssdr.load.p0 *= 4\n",
     "ssdr.diagnostic()"
@@ -309,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,9 +494,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "[gen_idx, prumax, prdmax] = [['PV_10'], [0], [0]]\n",
+    "\n",
+    "ssdr2.def_type2(gen_idx, prumax, prdmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Missing data: ['cost', 'cost.cru', 'cost.crd', 'cost.sfrur', 'sfrdr']\n",
+      "RTED GB model is loaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ssdr2.build()\n",
+    "ssdr2.mdl.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PV_10': <gurobi.Constr prdmax[PV_10]>}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssdr2.prdmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RTED GB model is loaded.\n",
+      "RTED is solved.\n",
+      "RTED: total cost=58.564\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gen</th>\n",
+       "      <th>pg</th>\n",
+       "      <th>pru</th>\n",
+       "      <th>prd</th>\n",
+       "      <th>bu</th>\n",
+       "      <th>bd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PV_1</td>\n",
+       "      <td>6.164</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PV_2</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PV_3</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PV_4</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PV_5</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PV_6</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PV_7</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PV_8</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PV_9</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PV_10</td>\n",
+       "      <td>0.900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Slack_10</td>\n",
+       "      <td>15.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         gen      pg  pru  prd   bu   bd\n",
+       "0       PV_1   6.164  0.0  0.0  0.0  0.0\n",
+       "1       PV_2   1.500  0.0  0.0  0.0  0.0\n",
+       "2       PV_3   1.000  0.0  0.0  0.0  0.0\n",
+       "3       PV_4   1.000  0.0  0.0  0.0  0.0\n",
+       "4       PV_5   1.000  0.0  0.0  0.0  0.0\n",
+       "5       PV_6   8.000  0.0  0.0  0.0  0.0\n",
+       "6       PV_7   7.000  0.0  0.0  0.0  0.0\n",
+       "7       PV_8   7.000  0.0  0.0  0.0  0.0\n",
+       "8       PV_9  10.000  0.0  0.0  0.0  0.0\n",
+       "9      PV_10   0.900  0.0  0.0  0.0  0.0\n",
+       "10  Slack_10  15.000  0.0  0.0  0.0  0.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ssdr2.solve()"
    ]
