--- a/jwang/jams/test_rted.ipynb
+++ b/jwang/jams/test_rted.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.2.post261.dev0+g4cc576a1\n",
+      "1.7.2.post262.dev0+g17e346f1\n",
       "2.8.0\n"
      ]
     }
@@ -524,27 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'PV_10': <gurobi.Constr prdmax[PV_10]>}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssdr2.prdmax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +684,7 @@
        "10  Slack_10  15.000  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,10 +695,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method rted.solve of <jams.rted2 object at 0x14c59e970>>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssdr2.solve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RTED GB model is loaded.\n",
+      "RTED removed Constrs: ['rampu', 'rampd']\n",
+      "RTED is solved.\n",
+      "RTED: total cost=58.564\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gen</th>\n",
+       "      <th>pg</th>\n",
+       "      <th>pru</th>\n",
+       "      <th>prd</th>\n",
+       "      <th>bu</th>\n",
+       "      <th>bd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PV_1</td>\n",
+       "      <td>6.164</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PV_2</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PV_3</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PV_4</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PV_5</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PV_6</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PV_7</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PV_8</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PV_9</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PV_10</td>\n",
+       "      <td>0.900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Slack_10</td>\n",
+       "      <td>15.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         gen      pg  pru  prd   bu   bd\n",
+       "0       PV_1   6.164  0.0  0.0  0.0  0.0\n",
+       "1       PV_2   1.500  0.0  0.0  0.0  0.0\n",
+       "2       PV_3   1.000  0.0  0.0  0.0  0.0\n",
+       "3       PV_4   1.000  0.0  0.0  0.0  0.0\n",
+       "4       PV_5   1.000  0.0  0.0  0.0  0.0\n",
+       "5       PV_6   8.000  0.0  0.0  0.0  0.0\n",
+       "6       PV_7   7.000  0.0  0.0  0.0  0.0\n",
+       "7       PV_8   7.000  0.0  0.0  0.0  0.0\n",
+       "8       PV_9  10.000  0.0  0.0  0.0  0.0\n",
+       "9      PV_10   0.900  0.0  0.0  0.0  0.0\n",
+       "10  Slack_10  15.000  0.0  0.0  0.0  0.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssdr2.solve(info=True, no_build=False,\n",
+    "           disable_sfr=False, disable_ramp=True)\n"
+   ]
   }
  ],
  "metadata": {
