Run cosim, add ev data

--- a/jwang/notes/co-sim_ev_F2.ipynb
+++ b/jwang/notes/co-sim_ev_F2.ipynb
@@ -4954,6 +4954,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.8470535278320312"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.getsizeof(sse.ev)/1024/1024"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
@@ -4966,6 +4987,7 @@
     "agc_mile.to_csv('cosim_18_F_agcm.csv', index=False)\n",
     "sfr_res.to_csv('cosim_18_F_sfr.csv', index=False)\n",
     "ev_agc.to_csv('cosim_18_F_evagc.csv', index=False)\n",
+    "ev_soc.to_csv('cosim_18_F_evsoc.csv', index=False)\n",
     "ev_soc.to_csv('cosim_18_F_evsoc.csv', index=False)\n",
     "\n",
     "import csv\n",
