--- a/jwang/notes/co-sim_plot_res.ipynb
+++ b/jwang/notes/co-sim_plot_res.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,6 +399,8 @@
     "evs = pd.read_csv('cosim_18_S_sse.csv')\n",
     "evagcf = pd.read_csv('cosim_18_F_evagc.csv')\n",
     "evagcs = pd.read_csv('cosim_18_S_evagc.csv')\n",
+    "evsocf = pd.read_csv('cosim_18_F_evsoc.csv')\n",
+    "evsocs = pd.read_csv('cosim_18_S_evsoc.csv')\n",
     "\n",
     "rted_res = {}\n",
     "for row in reader:\n",
@@ -507,7 +509,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "evagcf\n",
+    "evagcs\n",
+    "evsocf\n",
+    "evsocs"
+   ]
   },
   {
    "cell_type": "code",
