--- a/jwang/notes/co-sim_ev_S2.ipynb
+++ b/jwang/notes/co-sim_ev_S2.ipynb
@@ -4450,6 +4450,7 @@
     "sfr_res.to_csv('cosim_18_S_sfr.csv', index=False)\n",
     "ev_agc.to_csv('cosim_18_S_evagc.csv', index=False)\n",
     "ev_soc.to_csv('cosim_18_S_evsoc.csv', index=False)\n",
+    "sse.ev.to_csv('cosim_18_S_evdata.csv', index=False)\n",
     "\n",
     "import csv\n",
     "new_path = open('cosim_18_S_rted.csv', 'w')\n",
