Add EV pereference

--- a/jwang/notes/test_ev_ssm_tol.ipynb
+++ b/jwang/notes/test_ev_ssm_tol.ipynb
@@ -30,6 +30,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse = ev_ssm(ts=10.4, N=10000, step=1, tp=40,\n",
+    "             lr=0.1, lp=40, seed=2022, name=\"EVA\")\n",
+    "sse.ev"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -121,13 +132,6 @@
     "plt.bar(range(len(x0)), x0, label=\"x0\")\n",
     "plt.bar(range(len(x0)), x1, label=\"x0\", alpha=0.5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
