--- a/jwang/notes/test_ev_ssm_tol3.ipynb
+++ b/jwang/notes/test_ev_ssm_tol3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,100 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jinningwang/Documents/work/andes/jwang/notes/ev_ssm.py:448: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.ev['na'][self.ev['na'] > self.ev['nam']] = self.ev['nam'][self.ev['na'] > self.ev['nam']]\n",
-      "/Users/jinningwang/Documents/work/andes/jwang/notes/ev_ssm.py:449: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.ev['lc'][self.ev['na'] >= self.ev['nam']] = 1\n",
-      "EVA: ts=18[H], 10000 EVs, Total Q=87.83 MWh\n",
-      "Online 2955, Q=73.98 MWh, SoC=0.7712\n",
-      "Power(MW): Pt=-8.1388, Pc=-8.1388, Pd=-0.0\n",
-      "Ctrl: 0=1581; 1=1374; \n",
-      "EVA: Load A from Aest.csv.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# --- Response ---\n",
-    "\n",
-    "sse = ev_ssm(ts=18, N=10000, step=1, tp=40,\n",
-    "             lr=0.1, lp=40, seed=2022, name=\"EVA\",\n",
-    "             n_pref=1, is_report=True,\n",
-    "             tt_mean=0.5, tt_var=0.2, tt_lb=0, tt_ub=1)\n",
-    "sse.load_A(\"Aest.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.post4472.dev0+ge6d2e42\n",
-      "2.8.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run -i 'cosim_import.py'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "EVA: ts=18[H], 50000 EVs, Total Q=433.49 MWh\n",
-      "Online 14439, Q=361.0 MWh, SoC=0.7685\n",
-      "Power(MW): Pt=-39.7925, Pc=-39.7925, Pd=-0.0\n",
-      "Ctrl: 0=7733; 1=6706; \n",
-      "EVA: Load A from Aest.csv.\n",
-      "Working directory: \"/Users/jinningwang/Documents/work/andes/jwang/notes\"\n",
-      "> Loaded config from file \"/Users/jinningwang/.andes/andes.rc\"\n",
-      "> Loaded generated Python code in \"/Users/jinningwang/.andes/pycode\".\n",
-      "Generated code for <PQ> is stale.\n",
-      "Numerical code generation (rapid incremental mode) started...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating code for 1 models on 8 processes.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Saved generated pycode to \"/Users/jinningwang/.andes/pycode\"\n",
-      "> Reloaded generated Python code of module \"pycode\".\n",
-      "Generated numerical code for 1 models in 0.1449 seconds.\n",
-      "Parsing input file \"/Users/jinningwang/Documents/work/andes/jwang/case/ieee39_ev2.xlsx\"...\n",
-      "Input file parsed in 0.0695 seconds.\n",
-      "System internal structure set up in 0.0233 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "caseH = 18\n",
     "%run -i 'cosim_setup_andes.py'"
@@ -125,102 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ANDES total load is: 58.564 p.u.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run -i 'cosim_loadsyn.py'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-> System connectivity check results:\n",
-      "  No islanded bus detected.\n",
-      "  System is interconnected.\n",
-      "  Each island has a slack bus correctly defined and enabled.\n",
-      "\n",
-      "-> Power flow calculation\n",
-      "           Numba: On\n",
-      "   Sparse solver: KLU\n",
-      " Solution method: NR method\n",
-      "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.0921 seconds.\n",
-      "0: |F(x)| = 7.561234474\n",
-      "1: |F(x)| = 2.917096747\n",
-      "2: |F(x)| = 0.1313034816\n",
-      "3: |F(x)| = 0.0003572030639\n",
-      "4: |F(x)| = 4.286541788e-09\n",
-      "Converged in 5 iterations in 0.0047 seconds.\n",
-      "Power flow results are consistent. Conversion is successful.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2023-04-08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-> System connectivity check results:\n",
-      "  No islanded bus detected.\n",
-      "  System is interconnected.\n",
-      "  Each island has a slack bus correctly defined and enabled.\n",
-      "\n",
-      "-> Power flow calculation\n",
-      "           Numba: On\n",
-      "   Sparse solver: KLU\n",
-      " Solution method: NR method\n",
-      "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.0037 seconds.\n",
-      "0: |F(x)| = 7.561234474\n",
-      "1: |F(x)| = 2.917096747\n",
-      "2: |F(x)| = 0.1313034816\n",
-      "3: |F(x)| = 0.0003572030639\n",
-      "4: |F(x)| = 4.286541788e-09\n",
-      "Converged in 5 iterations in 0.0038 seconds.\n",
-      "Power flow results are consistent. Conversion is successful.\n",
-      "GSF is consistent.\n",
-      "RTED GB model is loaded.\n",
-      "RTED removed: ['rampu', 'rampd']\n",
-      "RTED limited: sfru, sfrd\n",
-      "RTED: total cost=4910.262\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pp cost=2224.7878007021177, gb cost=4910.261740428771\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run -i 'cosim_setup_dispatch.py'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,285 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "EVA: ts=18[H], 10000 EVs, Total Q=87.83 MWh\n",
-      "Online 2955, Q=73.98 MWh, SoC=0.7712\n",
-      "Power(MW): Pt=-8.1388, Pc=-8.1388, Pd=-0.0\n",
-      "Ctrl: 0=1581; 1=1374; \n",
-      "EVA: Load A from Aest.csv.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- Response ---\n",
     "\n",
     "sse = ev_ssm(ts=18, N=10000, step=1, tp=40,\n",
-    "             lr=0.1, lp=40, seed=2022, name=\"EVA\")\n",
-    "sse.load_A(\"Aest.csv\")"
+    "             lr=0.1, lp=40, seed=2022, name=\"EVA\",\n",
+    "             n_pref=1, is_report=True,\n",
+    "             tt_mean=0.5, tt_var=0.2, tt_lb=0, tt_ub=1,\n",
+    "             ict_off=True)\n",
+    "sse.load_A(\"Aest.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2866"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sse.neo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2866\n",
-      "0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "EVA MCS: 100%|██████████| 300/300 [00:55<00:00,  5.36it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.10274856028247\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# --- Response ---\n",
-    "\n",
-    "# sse = ev_ssm(ts=10.4, N=10000, step=1, tp=40,\n",
-    "#              lr=0.1, lp=40, seed=2022, name=\"EVA\")\n",
-    "# sse.load_A(\"Aest.csv\")\n",
-    "\n",
-    "print(sse.neo)\n",
-    "\n",
-    "x0 = sse.x0.copy()\n",
-    "print(sse.Prc)\n",
-    "sse.run(tf=18 + 300/3600, Pi=100,\n",
-    "        is_updateA=False, is_rstate=True,\n",
-    "        is_test=False, disable=False)\n",
-    "print(sse.Prc)\n",
-    "x1 = sse.x0.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sse.ev[sse.ev['ne'] >= sse.ev['nem']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lc</th>\n",
-       "      <th>na</th>\n",
-       "      <th>nam</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2439</td>\n",
-       "      <td>2756</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1480</td>\n",
-       "      <td>3484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2707</td>\n",
-       "      <td>2899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2537</td>\n",
-       "      <td>2874</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1607</td>\n",
-       "      <td>3448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3508</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2157</td>\n",
-       "      <td>2856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3509</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2154</td>\n",
-       "      <td>2152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3510</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2567</td>\n",
-       "      <td>2996</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3511</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2121</td>\n",
-       "      <td>2121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3512</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1797</td>\n",
-       "      <td>3116</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3513 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       lc    na   nam\n",
-       "0     0.0  2439  2756\n",
-       "1     0.0  1480  3484\n",
-       "2     0.0  2707  2899\n",
-       "3     0.0  2537  2874\n",
-       "4     0.0  1607  3448\n",
-       "...   ...   ...   ...\n",
-       "3508  0.0  2157  2856\n",
-       "3509  1.0  2154  2152\n",
-       "3510  0.0  2567  2996\n",
-       "3511  1.0  2121  2121\n",
-       "3512  0.0  1797  3116\n",
-       "\n",
-       "[3513 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sse.ev[['lc', 'na', 'nam']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sse.g_c(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2300.0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sse.neo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sse.r_agc(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sse.ev.lc.sum()"
    ]
   },
   {
@@ -547,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sse.g_u()"
+    "sse.ev.lc.sum()"
    ]
   },
   {
@@ -556,7 +139,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sse.neo"
+    "# --- Response ---\n",
+    "\n",
+    "# sse = ev_ssm(ts=10.4, N=10000, step=1, tp=40,\n",
+    "#              lr=0.1, lp=40, seed=2022, name=\"EVA\")\n",
+    "# sse.load_A(\"Aest.csv\")\n",
+    "\n",
+    "t_list = [10, 20, 30, 40, 50, 60]\n",
+    "p_list = [20, 0, 20, 0, 20, 0]\n",
+    "\n",
+    "x0 = sse.x0.copy()\n",
+    "print(sse.Prc)\n",
+    "for t, p in zip(t_list, p_list):\n",
+    "        sse.run(tf=18 + t/3600, Pi=p,\n",
+    "                is_updateA=False, is_rstate=True,\n",
+    "                is_test=False, disable=True)\n",
+    "print(sse.Prc)\n",
+    "x1 = sse.x0.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse.plot_agc()"
    ]
   },
   {
@@ -611,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('andes')",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -625,11 +233,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ef6cb5c8d99d66a3614f491d51fd40cd94c9138687df3d2045e3a510da5efc66"
+    "hash": "a33fa296fbacb8644bc9195ef2d759981fef097b4feb655e1da77ca7517b39c3"
    }
   }
  },
