Add option for x units of ev_ssm

--- a/jwang/notes/test_ev_ssm_tol3.ipynb
+++ b/jwang/notes/test_ev_ssm_tol3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,56 +24,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.post4476.dev0+g2e7c59d\n",
+      "2.9.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVA: ts=18[H], 50000 EVs, Total Q=433.49 MWh\n",
+      "Online 14439, Q=361.0 MWh, SoC=0.7685\n",
+      "Power(MW): Pt=-39.7925, Pc=-39.7925, Pd=-0.0\n",
+      "Ctrl: 0=7733; 1=6706; \n",
+      "EVA: Load A from Aest.csv.\n",
+      "Working directory: \"/home/jwang175/andes/jwang/notes\"\n",
+      "> Loaded config from file \"/home/jwang175/.andes/andes.rc\"\n",
+      "> Loaded generated Python code in \"/home/jwang175/.andes/pycode\".\n",
+      "Generated code for <PQ> is stale.\n",
+      "Numerical code generation (rapid incremental mode) started...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating code for 1 models on 6 processes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saved generated pycode to \"/home/jwang175/.andes/pycode\"\n",
+      "> Reloaded generated Python code of module \"pycode\".\n",
+      "Generated numerical code for 1 models in 0.2993 seconds.\n",
+      "Parsing input file \"/home/jwang175/andes/jwang/case/ieee39_ev2.xlsx\"...\n",
+      "Input file parsed in 0.1323 seconds.\n",
+      "System internal structure set up in 0.0515 seconds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANDES total load is: 58.564 p.u.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-> System connectivity check results:\n",
+      "  No islanded bus detected.\n",
+      "  System is interconnected.\n",
+      "  Each island has a slack bus correctly defined and enabled.\n",
+      "\n",
+      "-> Power flow calculation\n",
+      "           Numba: On\n",
+      "   Sparse solver: KLU\n",
+      " Solution method: NR method\n",
+      "Numba compilation initiated with caching.\n",
+      "Power flow initialized in 0.1267 seconds.\n",
+      "0: |F(x)| = 7.561234474\n",
+      "1: |F(x)| = 2.917096747\n",
+      "2: |F(x)| = 0.1313034816\n",
+      "3: |F(x)| = 0.0003572030639\n",
+      "4: |F(x)| = 4.286551558e-09\n",
+      "Converged in 5 iterations in 0.0183 seconds.\n",
+      "Power flow results are consistent. Conversion is successful.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restricted license - for non-production use only - expires 2023-10-25\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-> System connectivity check results:\n",
+      "  No islanded bus detected.\n",
+      "  System is interconnected.\n",
+      "  Each island has a slack bus correctly defined and enabled.\n",
+      "\n",
+      "-> Power flow calculation\n",
+      "           Numba: On\n",
+      "   Sparse solver: KLU\n",
+      " Solution method: NR method\n",
+      "Numba compilation initiated with caching.\n",
+      "Power flow initialized in 0.0082 seconds.\n",
+      "0: |F(x)| = 7.561234474\n",
+      "1: |F(x)| = 2.917096747\n",
+      "2: |F(x)| = 0.1313034816\n",
+      "3: |F(x)| = 0.0003572030639\n",
+      "4: |F(x)| = 4.286551558e-09\n",
+      "Converged in 5 iterations in 0.0103 seconds.\n",
+      "Power flow results are consistent. Conversion is successful.\n",
+      "GSF is consistent.\n",
+      "RTED GB model is loaded.\n",
+      "RTED removed: ['rampu', 'rampd']\n",
+      "RTED limited: sfru, sfrd\n",
+      "RTED: total cost=4910.262\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pp cost=2224.7878007021177, gb cost=4910.261740428772\n"
+     ]
+    }
+   ],
    "source": [
-    "%run -i 'cosim_import.py'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%run -i 'cosim_import.py'\n",
+    "\n",
     "caseH = 18\n",
-    "%run -i 'cosim_setup_andes.py'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run -i 'cosim_loadsyn.py'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run -i 'cosim_setup_dispatch.py'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run -i 'cosim_linktable.py'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ict_off = False\n",
+    "ecc_off = False\n",
+    "\n",
+    "%run -i 'cosim_setup_andes.py'\n",
+    "\n",
+    "%run -i 'cosim_loadsyn.py'\n",
+    "\n",
+    "%run -i 'cosim_setup_dispatch.py'\n",
+    "\n",
+    "%run -i 'cosim_linktable.py'\n",
+    "\n",
     "# Change ``rru``, ``rrd``, ``rsfr``, ``t_total`` for necessary.\n",
     "t_total = 3600\n",
     "\n",
@@ -102,8 +188,24 @@
     "             lr=0.1, lp=40, seed=2022, name=\"EVA\",\n",
     "             n_pref=1, is_report=True,\n",
     "             tt_mean=0.5, tt_var=0.2, tt_lb=0, tt_ub=1,\n",
-    "             ict_off=True)\n",
-    "sse.load_A(\"Aest.csv\")\n"
+    "             ict_off=True, ecc_off=False)\n",
+    "sse.load_A(\"Aest.csv\")\n",
+    "\n",
+    "evd0 = sse.ev.copy()\n",
+    "\n",
+    "np.random.seed(sse.seed)\n",
+    "ict_rid = np.random.randint(low=0,\n",
+    "                            high=sse.ev.shape[0],\n",
+    "                            size=3000)\n",
+    "\n",
+    "sse.ev.na.iloc[ict_rid] = sse.ev.nam.iloc[ict_rid]\n",
+    "sse.ev.lc.iloc[ict_rid] = 1\n",
+    "sse.g_u()\n",
+    "\n",
+    "# initial EV data\n",
+    "evd0 = sse.ev.copy()\n",
+    "\n",
+    "sse.g_frc()"
    ]
   },
   {
@@ -112,7 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sse.neo"
+    "sse.run(tf=18 + 5/3600, Pi=10,\n",
+    "        is_updateA=False, is_rstate=True,\n",
+    "        is_test=False, disable=False)\n",
+    "evd = sse.ev.copy()"
    ]
   },
   {
@@ -121,7 +226,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sse.ne"
+    "evd0[evd0['lc']==1][['u', 'c', 'c0', 'lc', 'na', 'nam']].head()\n",
+    "evd[evd['lc']==1][['u', 'c', 'c0', 'lc', 'na', 'nam']].head()\n",
+    "\n",
+    "# row index of evd0 where lc == 1\n",
+    "lcrid = evd0[evd0['lc'] == 1].index"
    ]
   },
   {
@@ -130,7 +239,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sse.ev.lc.sum()"
+    "# plt.plot(sse.Perl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse.plot_agc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse.ev.lc"
    ]
   },
   {
@@ -145,8 +272,8 @@
     "#              lr=0.1, lp=40, seed=2022, name=\"EVA\")\n",
     "# sse.load_A(\"Aest.csv\")\n",
     "\n",
-    "t_list = [10, 20, 30, 40, 50, 60]\n",
-    "p_list = [20, 0, 20, 0, 20, 0]\n",
+    "t_list = [60 + 60 * i for i in list(range(7))]\n",
+    "p_list = [2, 0.05, 0.0, 1.0, -0.05, 1, 0]\n",
     "\n",
     "x0 = sse.x0.copy()\n",
     "print(sse.Prc)\n",
@@ -156,6 +283,15 @@
     "                is_test=False, disable=True)\n",
     "print(sse.Prc)\n",
     "x1 = sse.x0.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sse.tss, sse.Perl)"
    ]
   },
   {
